fixed button padding, but messed up alignment

--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
 
 nav {
     display: flex;
-    position: fixed;
     width:100vw;
     background-color: #1d1d1d;
     justify-content: center;
@@ -19,16 +18,10 @@ nav {
 
 nav ul li {
     display: inline-block;
-    text-decoration: none;
-    border: solid;
-    border-color: red;
+    padding: 2% 0.01%;
+    
 }
 
-nav button {
-    background-color: transparent;
-    padding: 12px 15px;
-
-}
 
 nav a {   
     text-decoration: none;
@@ -37,8 +30,12 @@ nav a {
     font-weight: 400;
     font-size: 12px;
     letter-spacing: .02rem;
-    width: 100vw;
     transition: 1s color;
+    border: solid;
+}
+
+nav a:hover {
+    color: white;
 }
 
 .navIcon {
